--- a/CubePdf/Properties/Resources.resx
+++ b/CubePdf/Properties/Resources.resx
@@ -170,7 +170,7 @@
     <value>実行可能プログラム (*.exe;*.bat)|*.exe;*.bat|すべてのファイル(*.*)|*.*</value>
   </data>
   <data name="InvalidFilename" xml:space="preserve">
-    <value>/ : ? " &lt; &gt; |</value>
+    <value>/ * : ? " &lt; &gt; |</value>
   </data>
   <data name="InvalidFilenameTitle" xml:space="preserve">
     <value>ファイル名には次の文字は使えません。</value>
