--- a/CubePdf/Properties/Resources.resx
+++ b/CubePdf/Properties/Resources.resx
@@ -152,7 +152,7 @@
     <value>..\Resources\header.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="InputPathFilter" xml:space="preserve">
-    <value>PDF ファイル (*.pdf)|*.pdf|PS ファイル (*.ps)|*.ps|EPS ファイル (*.eps)|*.eps</value>
+    <value>PS ファイル (*.ps)|*.ps|EPS ファイル (*.eps)|*.eps|PDF ファイル (*.pdf)|*.pdf</value>
   </data>
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
