--- a/CubePdf.Engine/Properties/Resources.resx
+++ b/CubePdf.Engine/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EncryptionError" xml:space="preserve">
+    <value>パスワードで保護されているPDFファイルに結合する事はできません。</value>
+  </data>
   <data name="FileNotRelated" xml:space="preserve">
     <value>{0}: ファイルが関連付けられていません。</value>
   </data>
