メッセージの表示方法を修正

--- a/CubePdf/Properties/Resources.resx
+++ b/CubePdf/Properties/Resources.resx
@@ -173,7 +173,7 @@
     <value>CubePDF エラー</value>
   </data>
   <data name="WarningTitle" xml:space="preserve">
-    <value>CubePDF 警告</value>
+    <value>CubePDF 確認</value>
   </data>
   <data name="OutputPathFilter" xml:space="preserve">
     <value>PDF ファイル (*.pdf)|*.pdf|PS ファイル (*.ps)|*.ps|EPS ファイル (*.eps)|*.eps|PNG ファイル (*.png)|*.png|JPEG ファイル (*.jpg;*.jpeg)|*.jpg;*.jpeg|BMP ファイル (*.bmp)|*.bmp|TIFF ファイル (*.tiff;*.tif)|*.tiff;*.tif</value>
