--- a/CubePdf/Properties/Resources.resx
+++ b/CubePdf/Properties/Resources.resx
@@ -120,7 +120,7 @@
   <data name="About" xml:space="preserve">
     <value>CubePDF について</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Background.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -137,7 +137,7 @@
     <value>..\Resources\SettingButtonDisable.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="FileExists" xml:space="preserve">
-    <value>{0} は既に存在します。{1}しますか？</value>
+    <value>{0}は既に存在します。{1}しますか？</value>
   </data>
   <data name="FileNotSpecified" xml:space="preserve">
     <value>ファイルが指定されていません。</value>
@@ -180,5 +180,9 @@
   </data>
   <data name="InfoTitle" xml:space="preserve">
     <value>CubePDF</value>
+  </data>
+  <data name="TooLongFilenam" xml:space="preserve">
+    <value>指定されたパスが長すぎます。
+パス全体は260文字未満、ディレクトリ名は248文字未満で指定して下さい。</value>
   </data>
 </root>
