--- a/CubePdf/Properties/Resources.resx
+++ b/CubePdf/Properties/Resources.resx
@@ -185,4 +185,8 @@
     <value>指定されたパスが長すぎます。
 パス全体は260文字未満、ディレクトリ名は248文字未満で指定して下さい。</value>
   </data>
+  <data name="UserPasswordRequired" xml:space="preserve">
+    <value>編集パスワードと閲覧パスワードを共用すると、各種操作の制限が正常に機能しない可能性があります。
+閲覧パスワードに編集パスワードとは異なるものを設定するか、または、全ての操作を許可して下さい。</value>
+  </data>
 </root>
