--- a/CubePdf/MainForm.en.resx
+++ b/CubePdf/MainForm.en.resx
@@ -117,7 +117,238 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="GeneralTabPage.Text" xml:space="preserve">
+    <value>General</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="InputPathLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>43, 15</value>
+  </data>
+  <data name="InputPathLabel.Text" xml:space="preserve">
+    <value>Input:</value>
+  </data>
+  <data name="PostProcessLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>85, 15</value>
+  </data>
+  <data name="PostProcessLabel.Text" xml:space="preserve">
+    <value>Post process:</value>
+  </data>
+  <data name="OutputPathLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 15</value>
+  </data>
+  <data name="OutputPathLabel.Text" xml:space="preserve">
+    <value>Output:</value>
+  </data>
+  <data name="ResolutionLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>72, 15</value>
+  </data>
+  <data name="ResolutionLabel.Text" xml:space="preserve">
+    <value>Resolution:</value>
+  </data>
+  <data name="PDFVersionLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>81, 15</value>
+  </data>
+  <data name="PDFVersionLabel.Text" xml:space="preserve">
+    <value>PDF version:</value>
+  </data>
+  <data name="FileTypeLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>40, 15</value>
+  </data>
+  <data name="FileTypeLabel.Text" xml:space="preserve">
+    <value>Type:</value>
+  </data>
+  <data name="DocTabPage.Text" xml:space="preserve">
+    <value>Document</value>
+  </data>
+  <data name="DocTitleLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>38, 15</value>
+  </data>
+  <data name="DocTitleLabel.Text" xml:space="preserve">
+    <value>Title:</value>
+  </data>
+  <data name="DocAuthorLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>51, 15</value>
+  </data>
+  <data name="DocAuthorLabel.Text" xml:space="preserve">
+    <value>Author:</value>
+  </data>
+  <data name="DocSubtitleLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>56, 15</value>
+  </data>
+  <data name="DocSubtitleLabel.Text" xml:space="preserve">
+    <value>Subject:</value>
+  </data>
+  <data name="DocKeywordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>69, 15</value>
+  </data>
+  <data name="DocKeywordLabel.Text" xml:space="preserve">
+    <value>Keywords:</value>
+  </data>
+  <data name="SecurityTabPage.Text" xml:space="preserve">
+    <value>Security</value>
+  </data>
+  <data name="UserPasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>98, 15</value>
+  </data>
+  <data name="UserPasswordLabel.Text" xml:space="preserve">
+    <value>User password:</value>
+  </data>
+  <data name="ConfirmUserPasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>58, 15</value>
+  </data>
+  <data name="ConfirmUserPasswordLabel.Text" xml:space="preserve">
+    <value>Confirm:</value>
+  </data>
+  <data name="UserPasswordCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>134, 19</value>
+  </data>
+  <data name="UserPasswordCheckBox.Text" xml:space="preserve">
+    <value>Set user password</value>
+  </data>
+  <data name="AllowPrintCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>105, 19</value>
+  </data>
+  <data name="AllowPrintCheckBox.Text" xml:space="preserve">
+    <value>Allow printing</value>
+  </data>
+  <data name="AllowCopyCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>204, 19</value>
+  </data>
+  <data name="AllowCopyCheckBox.Text" xml:space="preserve">
+    <value>Allow copying text and images</value>
+  </data>
+  <data name="OwnerPasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>109, 15</value>
+  </data>
+  <data name="OwnerPasswordLabel.Text" xml:space="preserve">
+    <value>Owner password:</value>
+  </data>
+  <data name="ConfirmOwnerPasswordLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>58, 15</value>
+  </data>
+  <data name="ConfirmOwnerPasswordLabel.Text" xml:space="preserve">
+    <value>Confirm:</value>
+  </data>
+  <data name="PermissionLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>81, 15</value>
+  </data>
+  <data name="PermissionLabel.Text" xml:space="preserve">
+    <value>Permissions:</value>
+  </data>
+  <data name="AllowFormInputCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>143, 19</value>
+  </data>
+  <data name="AllowFormInputCheckBox.Text" xml:space="preserve">
+    <value>Allow filling in forms</value>
+  </data>
+  <data name="AllowModifyCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>291, 19</value>
+  </data>
+  <data name="AllowModifyCheckBox.Text" xml:space="preserve">
+    <value>Allow inserting, rotating, and removing pages</value>
+  </data>
+  <data name="RequiredUserPasswordCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>273, 19</value>
+  </data>
+  <data name="RequiredUserPasswordCheckBox.Text" xml:space="preserve">
+    <value>Require a password to open the document</value>
+  </data>
+  <data name="OwnerPasswordCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 19</value>
+  </data>
+  <data name="OwnerPasswordCheckBox.Text" xml:space="preserve">
+    <value>Encrypt the document with a password</value>
+  </data>
+  <data name="DetailTabPage.Text" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="PortraitRadioButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>69, 19</value>
+  </data>
+  <data name="PortraitRadioButton.Text" xml:space="preserve">
+    <value>Portrait</value>
+  </data>
+  <data name="LandscapeRadioButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>87, 3</value>
+  </data>
+  <data name="LandscapeRadioButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>86, 19</value>
+  </data>
+  <data name="LandscapeRadioButton.Text" xml:space="preserve">
+    <value>Landscape</value>
+  </data>
+  <data name="AutoRadioButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>188, 3</value>
+  </data>
+  <data name="AutoRadioButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 19</value>
+  </data>
+  <data name="AutoRadioButton.Text" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="OrientationLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>77, 15</value>
+  </data>
+  <data name="OrientationLabel.Text" xml:space="preserve">
+    <value>Orientation:</value>
+  </data>
+  <data name="OptionLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>56, 15</value>
+  </data>
+  <data name="OptionLabel.Text" xml:space="preserve">
+    <value>Options:</value>
+  </data>
+  <data name="OthersLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>51, 15</value>
+  </data>
+  <data name="OthersLabel.Text" xml:space="preserve">
+    <value>Others:</value>
+  </data>
+  <data name="EmbedFontCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>99, 19</value>
+  </data>
+  <data name="EmbedFontCheckBox.Text" xml:space="preserve">
+    <value>Embed fonts</value>
+  </data>
+  <data name="GrayscaleCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>83, 19</value>
+  </data>
+  <data name="GrayscaleCheckBox.Text" xml:space="preserve">
+    <value>Grayscale</value>
+  </data>
+  <data name="ImageFilterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>229, 19</value>
+  </data>
+  <data name="ImageFilterCheckBox.Text" xml:space="preserve">
+    <value>Compress images in the document</value>
+  </data>
+  <data name="WebOptimizeCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 19</value>
+  </data>
+  <data name="WebOptimizeCheckBox.Text" xml:space="preserve">
+    <value>Optimize for fast Web view</value>
+  </data>
+  <data name="UpdateCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>221, 19</value>
+  </data>
+  <data name="UpdateCheckBox.Text" xml:space="preserve">
+    <value>Check for updates when launched</value>
+  </data>
+  <data name="PostProcessLiteLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>85, 15</value>
+  </data>
+  <data name="PostProcessLiteLabel.Text" xml:space="preserve">
+    <value>Post process:</value>
+  </data>
+  <data name="SettingButton.Text" xml:space="preserve">
+    <value>Save settings</value>
+  </data>
+  <data name="ConvertButton.Text" xml:space="preserve">
+    <value>Convert</value>
+  </data>
+  <data name="ExitButton.Text" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAcAMDAAAAEACACoDgAAdgAAACAgAAABAAgAqAgAAB4PAAAYGAAAAQAIAMgGAADGFwAAEBAAAAEA
